# openCONFIGURATOR_library

./: .gitattributes  .gitignore  CMakeLists.txt
BR.FS.CdcBuilder/: .gitignore  App.config  BR.FS.CdcBuilder.csproj  Program.cs
BR.FS.CdcBuilder/Properties/: AssemblyInfo.cs
openCONFIGURATOR/: CMakeLists.txt  README.txt
openCONFIGURATOR/Include/: APIOperations.h  ApplicationProcess.h  AutoGenSetting.h  BaseIndex.h  BoostShared.h  ComplexDataType.h  Constants.h  DataTypeCollection.h  Declarations.h  Enums.h  Exception.h  Exports.h  ImportExportApi.h  Index.h  IndexCollection.h  Internal.h  LibraryConfiguration.h  Logging.h  NetworkManagement.h  Node.h  NodeApi.h  NodeCollection.h  ObjectDictionary.h  OdApi.h  OpenConfiguratorApi.h  Path.h  ProcessImage.h  ProjectApi.h  ProjectConfiguration.h  ProjectFileApi.h  ProjectSettings.h  Result.h  Setting.h  SubIndex.h  UtilityApi.h  UtilityClasses.h  Validation.h  ViewSetting.h  XddApi.h
openCONFIGURATOR/src/: APIOperations.cpp  ApplicationProcess.cpp  BaseIndex.cpp  ComplexDataType.cpp  DataTypeCollection.cpp  DllInit.cpp  Enums.cpp  Exception.cpp  ImportExportApi.cpp  Index.cpp  IndexCollection.cpp  LibraryConfiguration.cpp  Logging.cpp  NetworkManagement.cpp  Node.cpp  NodeApi.cpp  NodeCollection.cpp  ObjectDictionary.cpp  OdApi.cpp  ProcessImage.cpp  ProjectApi.cpp  ProjectConfiguration.cpp  ProjectFileApi.cpp  ProjectSettings.cpp  Result.cpp  SubIndex.cpp  Utility.cpp  UtilityApi.cpp  Validation.cpp  XdcOperations.cpp  XddApi.cpp
openCONFIGURATORCSHARPWrapper/: CMakeLists.txt  openCONFIGURATORcsharp.i
openCONFIGURATORSoln/: CMakeLists.txt
openCONFIGURATORSoln/openCONFIGURATOR/: CMakeLists.txt
openCONFIGURATORSoln/openCONFIGURATOR/Include/: ApplicationProcess.h  BaseIndex.h  ComplexDataType.h  DataTypeCollection.h  Declarations.h  Enums.h  Error.h  Exception.h  Exports.h  Index.h  IndexCollection.h  Internal.h  Logging.h  NetworkManagement.h  Node.h  NodeCollection.h  ObjectDictionary.h  ProcessImage.h  UtilityClasses.h  Validation.h
openCONFIGURATORSoln/openCONFIGURATOR/src/: APIOperations.cpp  ApplicationProcess.cpp  BaseIndex.cpp  ComplexDataType.cpp  DataTypeCollection.cpp  DllInit.cpp  Exception.cpp  Index.cpp  IndexCollection.cpp  Logging.cpp  NetworkManagement.cpp  Node.cpp  NodeCollection.cpp  ObjectDictionary.cpp  ProcessImage.cpp  ProjectSettings.cpp  Utility.cpp  Validation.cpp  XdcOperations.cpp
openCONFIGURATORSoln/openCONFIGURATORWrapper/: openconfiguratorWrapper.i
openCONFIGURATORTest/: CMakeLists.txt
openCONFIGURATORTest/Include/: ImportExportApiTest.h  NodeApiTest.h  OdApiTest.h  ProjectApiTest.h  ProjectFileApiTest.h  TestTemplate.h  UpgradeApiTest.h  XddApiTest.h
openCONFIGURATORTest/src/: ImportExportApiTest.cpp  NodeApiTest.cpp  OdApiTest.cpp  ProjectApiTest.cpp  ProjectFileApiTest.cpp  TestTemplate.cpp  UnitTests.cpp  UpgradeApiTest.cpp  XddApiTest.cpp
openCONFIGURATORTest/test_resources/testProject/: testProject.xml
openCONFIGURATORTest/test_resources/testProject/output/: .gitignore
openCONFIGURATORTest/test_resources/testProject/xdc/: CN.xdc  CN2.xdc  CN3.xdc  MN.xdc
openCONFIGURATORWrapper/: CMakeLists.txt  openconfiguratorWrapper.i
openCONFIGURATOR_ProjectUpgrade/AppProjectUpgrade/: CMakeLists.txt  main.cpp
openCONFIGURATOR_ProjectUpgrade/LibProjectUpgrade/: CMakeLists.txt
openCONFIGURATOR_ProjectUpgrade/LibProjectUpgrade/include/: BasicTypes.h  Constants.h  ErrorCode.h  Exports.h  LibraryConfiguration.h  Logging.h  Namespace.h  Node.h  NodeCollection.h  ProjectConfiguration.h  Result.h  UpgradeAPI.h  Utility.h  XmlOperations.h
openCONFIGURATOR_ProjectUpgrade/LibProjectUpgrade/src/: LibraryConfiguration.cpp  Logging.cpp  Node.cpp  NodeCollection.cpp  ProjectConfiguration.cpp  Result.cpp  UpgradeAPI.cpp  Utility.cpp  XmlOperations.cpp
openCONFIGURATOR_ProjectUpgrade/ProjectUpgradeTclWrapper/: CMakeLists.txt  ProjectUpgradeWrapper.i
openCONFIGURATOR_tools/: CMakeLists.txt  txt2cdc.c  txt2cdc.h
resources/: od.xml  openPOWERLINK_CN.xdd  openPOWERLINK_MN.xdd
resources/OC_ProjectFile/: openCONFIGURATOR.xsd
resources/XDD_ImportExport_Config/: POWERLINK_Types.xsd
resources/doc/: APIDocumentation.txt  openCONFIGURATOR.doxyfile  openCONFIGURATORLayout.xml
